--- a/docs/CV.Rmd
+++ b/docs/CV.Rmd
@@ -71,6 +71,30 @@ tribble(~Award, ~Description, ~Organisation, ~Year,
         detailed_entries(why = Description, when = Year, with = Award, what = Organisation)
 ```
 
+# Publications
+
+```{r pubs}
+tribble(~title, ~year, ~author, ~journal, ~doi,
+        "Same data, different analysts: variation in effect sizes due to analytical decisions in ecology and evolutionary biology", "2023", "Gould, E., Fraser, H., Parker, T.H., *et al.*", "EcoEvoRxiv", "https://doi.org/10.32942/X2GG62",
+        "Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology", "2023", "Ivimey-Cook, E., Pick, J.L., Bairos-Novak, K., Culina, A., Gould, E., Grainger, M., Marshall, B., Moreau, D., Paquet, M., Royauté, R., Sanchez-Tojar, A., Silva, I., Windecker, S.", "Journal of Evolutionary Biology", "https://doi.org/10.32942/X2CG64",
+        "Predicting reliability through structured expert elicitation with the repliCATS (Collaborative Assessments for Trustworthy Science) process", "2023","Fraser, H.,Bush, M., Wintle, B.C., Mody, F., Smith, E.T.,Hanea, A.M., Gould, E.,  Hemming, V., Hamilton, D.G., Rumpff, L., Wilkinson, D.P., Pearson, R., Singleton Thorn, F., Ashton, R., Willcox, A., Gray, C.T., Head, A., Ross, M., Groenewegen, R., Marcoci, A., Vercammen, A., Parker, T.H., Hoekstra, R., Nakagawa, S., Mandel, D.R., van Ravenzwaaij, D., McBride, M.F., Sinnott, R.O., Vesk, P.A., Burgman, M., Fidler, F.", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0274429",
+        "Method Reporting with Initials for Transparency (MeRIT) promotes more granularity and accountability for author contributions", "2023",  "Nakagawa, S., Ivimey-Cook, E., Grainger, M.J., O’Dea, R.E., Burke, S., Drobniak, S.M., Gould, E., Macartney, E.L., Martinig, A.R., Paquet, M., Morrison, K., Pick, J.L., Pottier, P., Ricolfi, L., Wilkinson, D.P., Willcox, A., Williams, C., Wilson, L.A.B., Windecker, S.M., Yang, Y., Lagisz, M.", "Nature Communications", "https://doi.org/10.1038/s41467-023-37039-1",
+        "Predicting and reasoning about replicability using structured groups", "2023",  "Wintle, B.C., Mody, F., Smith, E.T.,Hanea, A.M., Wilkinson, D.P., Hemming, V., Bush, M., Fraser, H., Singleton Thorn, F., McBride, M.F., Gould, E., Head, A., Hamilton, D.G., Rumpff, L., Hoekstra, R., Fidler, F.", "Royal Society Open Science", "https://osf.io/preprints/metaarxiv/vtpmb/",
+        "What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects", "2022", "Jones, C.S., Thomas, F.M., Michael, D.R., Fraser, H., Gould, E., Begley, J., Wilson, J., Vesk, P.A., Rumpff, L.", "Ecological Applications", "https://doi.org/10.1002/eap.2728",
+        "Mathematically aggregating experts’ predictions of possible futures", "2021",  "Hanea, A.M., Wilkinson, D.P., McBride, M.F., Lyon, A., van Ravenzwaaij, D., Singleton Thorn, F., Gray, C.T., Mandel, D.R., Willcox, A., Gould, E., Smith, E.T., Mody, F., Bush, M., Fidler, F., Fraser, H., Wintle, B.C.", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0256919",
+        "Towards open, reliable, and transparent ecology and evolutionary biology", "2021",  "O'Dea, R.E., Parker, T.H., Chee, Y.E., Culina, A., Drobniak, S.M., Duncan, D.H., Fidler, F., Gould, E., Ihle, M., Kelly, C., Lagisz, M., Roche, D.G., Sánchez-Tójar, A., Wilkinson, D.P., Wintle B.C., Nakagawa, S.", "BMC Biology", "https://doi.org/10.1186/s12915-021-01006-3",
+        "A practical guide for conservation planning using the General Ecosystem Model for Southern Australian Woodlands.", "2021", "Good, M., Fraser, H., Gould, E., Vesk, P., Rumpff, L.", "NESP Threatened Sprecies Recovery Hub Project 7.2, Brisbane", "https://www.nespthreatenedspecies.edu.au/media/yvlbs1tk/7-2-a-practical-guide-for-conservation-planning-using-the-general-ecosystem-model-for-southern-australian-woodlands_v3.pdf"
+) %>% 
+  detailed_entries(
+    what = author,
+    when = year,
+    with = title,
+    where = journal,
+    why = doi
+  )
+```
+
+
 # Selected Talks and Workshops
 
 ```{r talks}
@@ -81,7 +105,6 @@ tibble::tribble(
   "Workshop: Creating reproducible workflows in R with the targets:: package", "Society for Open Reliable and Transparent Ecology and Evoluation Workshop Series", "Online - Oceania", 2022,
   "'ResearchOps: A principled framework and guide to computational reproducibility', and 'Modelling as Ways of Knowing - How Viewing Models as an Epistemic Activity is useful in Ecology'", "Association for Interdisciplinary Metaresearch and Open Science Conference", "Melbourne, Australia", 2021,
   "Workshop: 'Preregistration Templates for Model-Based Research'", "Model Based Research and Reproducibility Workshop", "Centre for Open Science", 2020,
-  "Workshop: 'Transparency & Reproducibility in Non-Hypothesis Testing Research'", "Society for the Improvement of Psychological Sciences", "Rotterdam", 2019,
     "Poster Presentation: 'Questionable Research Practices in Non-Hypothesis Testing Research' ", "MetaScience Symposium & Association for Interdisciplinary Meta-Research and Open Science Conference", "San Francisco & Melbourne", 2019,
 ) %>% 
   detailed_entries(
@@ -108,29 +131,3 @@ tibble::tribble(
   why = description
 )
 ```
-
-# Publications
-
-```{r pubs}
-tribble(~title, ~year, ~author, ~journal, ~doi,
-        "Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology", "2023", "Ivimey-Cook, E., Pick, J.L., Bairos-Novak, K., Culina, A., Gould, E., Grainger, M., Marshall, B., Moreau, D., Paquet, M., Royauté, R., Sanchez-Tojar, A., Silva, I., Windecker, S.", "Journal of Evolutionary Biology", "https://doi.org/10.32942/X2CG64",
-        "Predicting reliability through structured expert elicitation with the repliCATS (Collaborative Assessments for Trustworthy Science) process", "2023","Fraser, H.,Bush, M., Wintle, B.C., Mody, F., Smith, E.T.,Hanea, A.M., Gould, E.,  Hemming, V., Hamilton, D.G., Rumpff, L., Wilkinson, D.P., Pearson, R., Singleton Thorn, F., Ashton, R., Willcox, A., Gray, C.T., Head, A., Ross, M., Groenewegen, R., Marcoci, A., Vercammen, A., Parker, T.H., Hoekstra, R., Nakagawa, S., Mandel, D.R., van Ravenzwaaij, D., McBride, M.F., Sinnott, R.O., Vesk, P.A., Burgman, M., Fidler, F.", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0274429",
-        "Method Reporting with Initials for Transparency (MeRIT) promotes more granularity and accountability for author contributions", "2023",  "Nakagawa, S., Ivimey-Cook, E., Grainger, M.J., O’Dea, R.E., Burke, S., Drobniak, S.M., Gould, E., Macartney, E.L., Martinig, A.R., Paquet, M., Morrison, K., Pick, J.L., Pottier, P., Ricolfi, L., Wilkinson, D.P., Willcox, A., Williams, C., Wilson, L.A.B., Windecker, S.M., Yang, Y., Lagisz, M.", "Nature Communications", "https://doi.org/10.1038/s41467-023-37039-1",
-        "Predicting and reasoning about replicability using structured groups", "2023",  "Wintle, B.C., Mody, F., Smith, E.T.,Hanea, A.M., Wilkinson, D.P., Hemming, V., Bush, M., Fraser, H., Singleton Thorn, F., McBride, M.F., Gould, E., Head, A., Hamilton, D.G., Rumpff, L., Hoekstra, R., Fidler, F.", "Royal Society Open Science", "https://osf.io/preprints/metaarxiv/vtpmb/",
-        "What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects", "2022", "Jones, C.S., Thomas, F.M., Michael, D.R., Fraser, H., Gould, E., Begley, J., Wilson, J., Vesk, P.A., Rumpff, L.", "Ecological Applications", "https://doi.org/10.1002/eap.2728",
-        "Mathematically aggregating experts’ predictions of possible futures", "2021",  "Hanea, A.M., Wilkinson, D.P., McBride, M.F., Lyon, A., van Ravenzwaaij, D., Singleton Thorn, F., Gray, C.T., Mandel, D.R., Willcox, A., Gould, E., Smith, E.T., Mody, F., Bush, M., Fidler, F., Fraser, H., Wintle, B.C.", "PLOS ONE", "https://doi.org/10.1371/journal.pone.0256919",
-        "Towards open, reliable, and transparent ecology and evolutionary biology", "2021",  "O'Dea, R.E., Parker, T.H., Chee, Y.E., Culina, A., Drobniak, S.M., Duncan, D.H., Fidler, F., Gould, E., Ihle, M., Kelly, C., Lagisz, M., Roche, D.G., Sánchez-Tójar, A., Wilkinson, D.P., Wintle B.C., Nakagawa, S.", "BMC Biology", "https://doi.org/10.1186/s12915-021-01006-3",
-        "A practical guide for conservation planning using the General Ecosystem Model for Southern Australian Woodlands.", "2021", "Good, M., Fraser, H., Gould, E., Vesk, P., Rumpff, L.", "NESP Threatened Sprecies Recovery Hub Project 7.2, Brisbane", "https://www.nespthreatenedspecies.edu.au/media/yvlbs1tk/7-2-a-practical-guide-for-conservation-planning-using-the-general-ecosystem-model-for-southern-australian-woodlands_v3.pdf"
-) %>% 
-  detailed_entries(
-    what = author,
-    when = year,
-    with = title,
-    where = journal,
-    why = doi
-  )
-
-
-```
-
-
