--- a/quarto-CV/quarto-CV.qmd
+++ b/quarto-CV/quarto-CV.qmd
@@ -109,7 +109,7 @@ cvteaching <- function(tbl, role, subject, years, where){
 
 # Summary
 
-"Elliot Gould is a PhD candidate at the School of Agriculture, Food and Ecosystem Sciences, and a Quantitative Research Assistant on the [repliCATS project](replicats.research.unimelb.edu.au/) at the School of History and Philosophical Studies, University of Melbourne. Their PhD investigates the transparency and reproducibility of ecological models in applied ecology and conservation decision-making. In their role as a Quantitative Research Assistant, Elliot managed a small team of researchers to develop a data analytics and management platform for the repliCATS project, and contributed to research on metascience. They have an enthusiasm for teaching and skill-sharing, particularly with regard to building a strong community of practice in emerging open-science methodology and computational biology within ecology and conservation. Elliot's research seeks to use data science techniques to advance the open-science movement by improving transparency and reproducibility, focussing on ecology and conservation Science. Other research interests include decision-theory, Structured Decision Making, and plant ecology (especially grasslands of the Victorian Volcanic Plains)."
+"Elliot Gould is a PhD candidate at the School of Agriculture, Food and Ecosystem Sciences, and a Quantitative Research Assistant on the [repliCATS project](replicats.research.unimelb.edu.au/) at the School of History and Philosophical Studies, University of Melbourne. Their PhD investigates the transparency and reproducibility of ecological models in applied ecology and conservation decision-making. In their role as a Quantitative Research Assistant, Elliot managed a small team of researchers to develop a data analytics and management platform for the repliCATS project, and contributed to research on metascience. They have an enthusiasm for teaching and skill-sharing, particularly with regard to building a strong community of practice in emerging open-science methodology and computational biology within ecology and conservation. Elliot's research seeks to use data science techniques to advance the open-science movement by improving transparency and reproducibility, focussing on ecology and conservation Science. Other research interests include decision-theory, Structured Decision Making, and plant ecology (especially grassy woodlands & grasslands of the Victorian Volcanic Plains)."
 
 # Employment
 
