rename section, add service

--- a/quarto-CV/quarto-CV.qmd
+++ b/quarto-CV/quarto-CV.qmd
@@ -43,8 +43,16 @@ sidebar:
           inst: "University of Melbourne"
           time: "2005 - 2011"
           details: "Major in Indonesian, First Class Honours Average."
-    - name: Contact
+    - name: Service
       items:
+        - text: "Preregistration Template Working Group Member"
+          inst: "Centre for Open Science"
+          time: "2023 - Present"
+          details: "[The Preregistration Template Working Group](https://www.cos.io/blog/new-working-group-seeks-to-curate-and-evaluate-preregistration-templates) seeks to: 1. Establish criteria to evaluate the suitability of new preregistration templates for inclusion in the Open Science Framework (OSF); 2. Develop a procedure by which community creators of preregistration templates can put templates forward for inclusion in OSF; 3. Advise and inform COS on issues related to preregistration implementation in OSF."
+        - text: "Founding Member, Secretary / Treasurer"
+          inst: "Society for Open, Reliable, and Transparent Ecology and Evolutionary Biology (SORTEE)"
+          time: "2020 - 2023"
+          details: "SORTEE is a service organization which brings together researchers working to improve reliability and transparency through cultural and institutional changes in ecology, evolutionary biology, and related fields broadly defined."
 execute: 
   echo: false
 ---
