Add content to service subsection

--- a/quarto-CV/quarto-CV.qmd
+++ b/quarto-CV/quarto-CV.qmd
@@ -132,7 +132,8 @@ tibble::tribble(
     ~role, ~institution, ~dates, ~details,
     "Consultant Ecological Modeller", "Department of Environment Land Water and Planning\nVictorian Government", "March 2020 - Present", "This research consultancy comprises a component of my PhD, aiming to test and develop preregistration templates for ecology and conservation using a case study of environmental flows management in Victoria, Australia. I designed and delivered a collaborative workshop with DEECA staff, analysed and visualised environmental flow and modelled vegetation outcome data.",
     "Quantitative Research Assistant - repliCATS, SCORE Program", "School of Historical and Philosophical Studies,\n School of BioSciences\nUniversity of Melbourne", "2019 - 2024",
-    "Systematising Confidence in Open Research and Evidence (SCORE) is a Research Program initiated by the Defense Advanced Research Projects Agency  (DARPA) that aims to develop and deploy automated tools to assign 'confidence scores' to Social and Behavioural research results and claims in light of recent evidence about the 'Replication Crisis' besetting Science. The repliCATS project is one team within the SCORE project, based in Melbourne. In this role, Elliot lead a small team within the repliCATS project to build data analysis software and infrastructure to manage and deliver data products to internal teams and external partners. Research components of the role include modelling to investigate predictors of replication success."
+    "Systematising Confidence in Open Research and Evidence (SCORE) is a Research Program initiated by the Defense Advanced Research Projects Agency  (DARPA) that aims to develop and deploy automated tools to assign 'confidence scores' to Social and Behavioural research results and claims in light of recent evidence about the 'Replication Crisis' besetting Science. The repliCATS project is one team within the SCORE project, based in Melbourne. In this role, Elliot lead a small team within the repliCATS project to build data analysis software and infrastructure to manage and deliver data products to internal teams and external partners. Research components of the role include modelling to investigate predictors of replication success.",
+    "Research Assistant, Various Roles", "School of BioSciences, School of Geography\nUniversity of Melbourne", "2015 - Present", "National Environmental Science Programme, Threatened Species Recovery Hub: Conservation actions for Threatened Ecological Communities. Various plant ecology and Structured Decision Making projects, involving: data analysis and visualisations, building shiny Apps, model building and testing." 
 ) |>
     cvevents(when = "dates", 
              what = "role", 
