Add guest lecturer section

--- a/quarto-CV/quarto-CV.qmd
+++ b/quarto-CV/quarto-CV.qmd
@@ -155,8 +155,9 @@ tibble::tribble(
     "Demonstrator, Tutor", "Vegetation Management \\& Conservation", c(2018, 2019), "University of Melbourne",
     "Demonstrator, Tutor", "Applied Ecology", c(2014, 2015), "University of Melbourne",
     "Demonstrator, Tutor", "Biology of Cells \\& Organisms", c(2012, 2013,2014,2015), "University of Melbourne",
+    "Guest Lecturer", "Environmental Risk Assessment", c(2024), "University of Melbourne",
     "Guest Lecturer", "Biometry", c(2023), "University of Melbourne",
-    "Guest Lecturer", "Critical Thinking with Data", c(2021), "University of Melbourne"
+    "Guest Lecturer", "Critical Thinking with Data", c(2021), "University of Melbourne",
 )  %>%  cvteaching(role = "role", 
                    subject = "subject", 
                    years = "years", 
